Tagging feature completed

--- a/blogger/app/views/articles/index.html.erb
+++ b/blogger/app/views/articles/index.html.erb
@@ -11,3 +11,6 @@
 
 <%= link_to "Create a New Article", new_article_path, 
 class: 'new_article' %>
+<div style="margin-top:30px;">
+<hr>
+<%= link_to "See All Tags", tags_path%>
